[NEW & FIX]: navbar issue and light/dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,14 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  /* default theme */
+  --background: white;
+  --foreground: black;
+}
+
+[data-theme="dark"] {
+  --background: "black";
+  --foreground: "white";
 }
 
 @media (prefers-color-scheme: dark) {
